--- a/app/partials/input.html
+++ b/app/partials/input.html
@@ -3,10 +3,10 @@
 <form id="auth-form" class="form auth-form">
 
 	<label for="app_key">App Key</label>
-	<input type="text" placeholder="App Key" name="app_key" required id="app_key" />
+	<input type="text" placeholder="App Key" name="app_key" required id="app_key" value="VZpZZdY4wThXNwNCkCEXRK" />
 
 	<label for="app_sec">App Secret</label>
-	<input type="text" placeholder="App Secret" name="app_sec" required id="app_sec" />
+	<input type="text" placeholder="App Secret" name="app_sec" required id="app_sec" value="BSw632Nqf9GMucMRuVpH3x"/>
 
 	<label for="app_time">Time Signature</label>
 	<select name="app_time" id="app_time">
