initial commit of es6 and babel use

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,36 +1,1 @@
-* {
-  padding: 0;
-  margin: 0;
-}
-html,
-body {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding: .5em;
-}
-.error,
-.success {
-  padding: 1em;
-  margin: 1em;
-  border-radius: 5px;
-}
-.error {
-  background: #d9534f;
-}
-.success {
-  background: #5cb85c;
-}
-.form.auth-form input[type='text'],
-.form.auth-form .btn,
-.form.auth-form select {
-  width: 55%;
-  padding: 1em 0 1em 1em;
-  margin: 1em;
-}
-.form.auth-form label {
-  width: 100%;
-  float: left;
-}
+/* styles here */
